--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -7,6 +7,8 @@
 <!--[if (gt IE 9)|!(IE)]><!-->
 %html(lang="#{lang}" class="no-js")
   <!--<![endif]-->
+  /
+    HTML5, CSS3 and design by Nico Hagenburger - www.hagenburger.net
   %head
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
@@ -20,6 +22,12 @@
     %link(rel="apple-touch-icon" href="#{current_page_relative_path}/apple-touch-icon.png")
     %link(rel="stylesheet" href="#{current_page_relative_path}/stylesheets/josephtong.css?v=1")
     %script(src="#{current_page_relative_path}/javascripts/vendor/modernizr-1.5.min.js")
+    -# see http://www.hagenburger.net/BLOG/A-Better-Typekit-Integration.html
+    %script(async src="//use.typekit.com/ith3lis.js")
+    %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
+    %script
+      !window.jQuery && document.write(unescape('%3Cscript src="#{current_page_relative_path}/javascripts/vendor/jquery-1.4.2.min.js"%3E%3C/script%3E'))
+    = javascripts :josephtong
   %body
     %header
       Joseph C L Tong
@@ -27,8 +35,4 @@
     #main
       = yield
     %footer
-    #intro
-    %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
-    %script
-      !window.jQuery && document.write(unescape('%3Cscript src="#{current_page_relative_path}/javascripts/vendor/jquery-1.4.2.min.js"%3E%3C/script%3E'))
-    = javascripts :josephtong
+    -#intro
