navigation via css3:target

--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -30,9 +30,10 @@
     = javascripts :josephtong
   %body
     %header
-      Joseph C L Tong
-      %small Berlin · Hong Kong · London
+      %a(href="#index")
+        Joseph C L Tong
+        %small Home
     #main
       = yield
     %footer
-    -#intro
+    #intro
