--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -8,15 +8,15 @@
   %section#ante-poetry
     %h2 Ante/Poetry
     %nav
-      %a(href="#") Molecular
-      %a(href="#") Moment Between Thoughts
-      %a(href="#") Unholy Litanies
-      %a(href="#") Soliloquoy
-      %a(href="#") Hope-struck
-      %a(href="#") Filix
-      %a(href="#") Re Vera
-      %a(href="#") Neue
-      %a(href="#") Tausend
+      %a(href="#molecular") Molecular
+      %a(href="#moment-between-thoughts") Moment Between Thoughts
+      %a(href="#unholy-litanies") Unholy Litanies
+      %a(href="#soliloquoy") Soliloquoy
+      %a(href="#hope-struck") Hope-struck
+      %a(href="#filix") Filix
+      %a(href="#re-vera") Re Vera
+      %a(href="#neue") Neue
+      %a(href="#tausend") Tausend
   %section#ante-interior
     %h2 Ante/Interior
     %nav
