--- a/src/stylesheets/partials/_intro.scss
+++ b/src/stylesheets/partials/_intro.scss
@@ -1,4 +1,5 @@
 #intro {
+  @extend .page;
   background: image-url("25.jpg");
   background-size: 100% 100%;
   bottom: 0;
@@ -6,4 +7,5 @@
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 999;
 }
