--- a/src/pages/poetry/_hope-struck.haml
+++ b/src/pages/poetry/_hope-struck.haml
@@ -1,6 +1,6 @@
 %article#hope-struck
-  %heade  
-    %h1 Ho<br><br>stru<br>k
+  %header
+    %h1 Ho<br>pe<br><br>stru<br>k
     %h2 0<br>5
 
   %section
