--- a/src/stylesheets/josephtong.scss
+++ b/src/stylesheets/josephtong.scss
@@ -46,3 +46,4 @@ $base-line-height: 1.231;
 @import "partials/intro";
 @import "partials/index";
 @import "partials/poetry";
+@import "partials/art";
