--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -1,5 +1,8 @@
 !!!  
 - lang = @lang || 'en'
+- @author = "Joseph C L Tong"
+- @description = "Joseph C L Tong"
+- @title = "Joseph C L Tong"
 <!--[if lt IE 7 ]><html lang="#{lang}" class="no-js ie6"><![endif]-->
 <!--[if IE 7 ]><html lang="#{lang}" class="no-js ie7"><![endif]-->
 <!--[if IE 8 ]><html lang="#{lang}" class="no-js ie8"><![endif]-->
@@ -9,19 +12,22 @@
   <!--<![endif]-->
   /
     HTML5, CSS3 and design by Nico Hagenburger - www.hagenburger.net
+    Made with Haml, Sass/SCSS, Compass, Staticmatic, HTML5 Boilerplate and love.
+    Source available at (be creative - don't copy):
+    https://github.com/hagenburger/josephtong
   %head
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
-    - if @description
+    - if description = @description
       %meta(name="description" content="#{description}")
     - if author = @author
       %meta(name="author" content="#{author}")
     %title= @title
     %meta(name="viewport" content="width=device-width; initial-scale=1.0")
-    %link(rel="shortcut icon" href="#{current_page_relative_path}/favicon.ico")
-    %link(rel="apple-touch-icon" href="#{current_page_relative_path}/apple-touch-icon.png")
-    %link(rel="stylesheet" href="#{current_page_relative_path}/stylesheets/josephtong.css?v=1")
-    %script(src="#{current_page_relative_path}/javascripts/vendor/modernizr-1.5.min.js")
+    %link(rel="shortcut icon" href="#{current_page_relative_path}favicon.ico")
+    %link(rel="apple-touch-icon" href="#{current_page_relative_path}apple-touch-icon.png")
+    %link(rel="stylesheet" href="#{current_page_relative_path}stylesheets/josephtong.css?v=1")
+    %script(src="#{current_page_relative_path}javascripts/vendor/modernizr-1.5.min.js")
     -# see http://www.hagenburger.net/BLOG/A-Better-Typekit-Integration.html
     %script(async src="//use.typekit.com/ith3lis.js")
     %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
@@ -32,7 +38,9 @@
     %header
       %a(href="#index")
         Joseph C L Tong
-        %small Home
+      %small
+        %a(href="#index") Home
+        %a(href="#contact") Contact
     #main
       = yield
     %footer
