--- a/src/stylesheets/global/_typography.scss
+++ b/src/stylesheets/global/_typography.scss
@@ -27,6 +27,11 @@
   @include font-size($base-font-size);
 }
 
+.ml {
+  line-height: 20px;
+  @include font-size(($base-font-size + $large-font-size) / 2);
+}
+
 .l {
   line-height: 30px;
   @include font-size($large-font-size);
