--- a/src/pages/poetry/_neue.haml
+++ b/src/pages/poetry/_neue.haml
@@ -10,14 +10,14 @@
       Four systems of function  
       Renders me anonymous.
 
-      =
-
+  %section  
+    :markdown  
       Who is holier  
       Than he  
       Who speaks in rhyme?
 
-      =
-
+  %section  
+    :markdown  
       I sit as an observer  
       My eyes set upon nature  
       Closeted  
@@ -29,8 +29,8 @@
       Yet it is he who  
       Seeks my praise.
 
-      =
-
+  %section  
+    :markdown  
       Fluid breath  
       Of spring  
       Twilight extends  
@@ -40,15 +40,15 @@
       Brings to union  
       Hand and heart.
 
-      =
-
+  %section  
+    :markdown  
       I lock horns to kill off  
       Any remnants of dignity  
       I battle head-to-head  
       With those who coincide with me.
 
-      =
-
+  %section  
+    :markdown  
       Fight  
       Again we fight  
       A new terror to come ashore
@@ -56,7 +56,7 @@
       Sing  
       Again we sing  
       Across oceans my song of folklore  
-       To rest  
+      To rest  
       Again laid to rest  
       These infants who lived before
 
@@ -64,8 +64,8 @@
       there is no time  
       but to dream of a life no more.
 
-      =
-
+  %section  
+    :markdown  
       If I am one  
       Then I am the sum of my parts  
       Two halves  
@@ -81,16 +81,16 @@
       Or I think because I am  
       Programmed? 
 
-      \-----
-
+  %section  
+    :markdown  
       Incidental / accidental?
 
       Which is definite  
       The smashed head upon the floor  
       Or the motion or the motion of the fall?
 
-      \----
-
+  %section  
+    :markdown  
       Flowers  
       (colour and scent).
 
@@ -100,8 +100,8 @@
       Hive  
       (colour, buzzing sound and scent of honey).
 
-      \-----
-
+  %section  
+    :markdown  
       I am unknown to myself  
       But not to you
 
@@ -114,8 +114,8 @@
       You listen to me  
       As I annihilate you.
 
-      \--
-
+  %section  
+    :markdown  
       Dreams materialise  
       Like an answered prayer
 
@@ -138,22 +138,23 @@
       So dreaming is what I want  
       As dreaming is to be.
 
-      ===
-
+  %section  
+    :markdown  
       Captive in a moment  
       Singular
 
       Held at ransom  
       Plural.
 
-      \--
-
+  %section  
+    :markdown  
       Modifications  
       Come at a price
 
       A constitution derived from grass and weed.  
-      \-----
 
+  %section  
+    :markdown  
       I shall let my spine dictate where I go and when I shall leave
 
       How to lean on top of my table  
@@ -168,8 +169,8 @@
       And disintegrate  
       Like morning dew.
 
-      \--
-
+  %section  
+    :markdown  
       Salome of my own imagination  
       Jesus from a much needed faith  
       Holy trinity I stole from a pedestal  
