--- a/src/pages/poetry/_unholy-litanies.haml
+++ b/src/pages/poetry/_unholy-litanies.haml
@@ -42,7 +42,7 @@
   %section
     :markdown
       Rugged mural lynched above thy death bed  
-      Hangs like a white flag...
+      Hangs like a white flag...  
       That once was a treasure trove for musing;  
 
       Benign
@@ -78,15 +78,14 @@
   %section
     :markdown
       Truly, I am my own master  
-      (… Am I not?)
+      (… Am I not?)  
       Or have I eliminated all those around me  
       To be beneath me?
 
   %section
     :markdown
       Upon every grave-stone  
-      A face of a thousand faces  
-      Cling.
+      A face of a thousand faces cling.  
       Words on epitaph  
       Unlace past deeds, yet
 
@@ -105,7 +104,7 @@
 
   %section
     :markdown
-      Hands and feet tied before the roasting…
+      Hands and feet tied before the roasting…  
       The crimson flames of Catholicism  
       Suffocates and empties the very organ  
       That  
@@ -115,7 +114,7 @@
       The contradiction of aggression and apathy  
       Swirls like cyclones amidst symbols and tunes,  
       Has me faltering  
-      - Handicapped -
+      - Handicapped -  
       At twenty-four.
 
   %section
@@ -138,10 +137,10 @@
   %section
     :markdown
       Gilded ornamentations  
-      Decorate the smiles of dreamers;  
+      Decorate the smiles of dreamers;
 
       Their gifts, evidential,  
-      Weaves a common net  
+      Weaves a common net
 
       That inevitably sequesters  
       Their self-defects.
@@ -156,13 +155,13 @@
     :markdown
       The ignited forms,  
       In this mathematical maze beyond  
-      The bright twinkling that illumines the dark canvas:
+      The bright twinkling that illumines the dark canvas:  
       Man pondered these images and created signs;  
       Created mine.
 
       Though composed of binary oppositions,  
       This self  
-      - the purist symbolism of myself –
+      - the purist symbolism of myself –  
       Evokes scepticism amongst friends.
 
   %section
@@ -172,7 +171,7 @@
       Meticulous in their note-taking…
 
       But it is I, who should resign  
-      To this discretion.  
+      To this discretion.
 
       So let them become those  
       Men, children and mothers, who  
@@ -195,7 +194,7 @@
       Cavernous like a crater.
 
       They call me a chingado  
-      Who awaits his place in society.
+      Who awaits his place in society.  
       Painted wench-like yet dutiful  
       I was beautiful;  
       Even behind that hysterical gaze,  
@@ -244,7 +243,7 @@
       Seemingly  
       Instantaneous, and  
       Superficially  
-      Substantiated,  
+      Substantiated,
 
       He calls on his foes to ask for forgiveness.
 
@@ -268,7 +267,7 @@
       Manically  
       Subtle, yet  
       Rudimentarily  
-      Elementary;  
+      Elementary;
 
       And that life ever reaches its pinnacle is non-sensical.
 
@@ -294,7 +293,7 @@
       Greets me with the usual pleasantries.
 
       Jesus, with his loin-cloth  
-      Stares as I lie naked with myself.
+      Stares as I lie naked with myself.  
       Though He lives within me  
       And, I, within Him
 
@@ -329,7 +328,7 @@
       The very synapses that bind
 
       I see in others  
-      Their physical majesty (only)
+      Their physical majesty (only)  
       Be it, Foreign, alien… European.
 
       I roam these corridors  
@@ -356,7 +355,7 @@
       Away from redemption,  
       The chores of everyday life  
       Of every unimportant person  
-      Bears down like a tsunami.
+      Bears down like a tsunami.  
       Perhaps it is for her sake;  
       For the sake of  
       The eternal artist,  
@@ -382,13 +381,13 @@
       The gift that granted me  
       Lucidity of reasoning.
 
-      Yet clarity of thought has brought only diffidence.
+      Yet clarity of thought has brought only diffidence.  
       If only I could, with a single blow to the throat,  
       Alleviate this nuisance  
       Than to be goaded by another glorious day.
 
       Knowledge has not set me free nor has my naivety  
-      Been able to cage me from combustion.
+      Been able to cage me from combustion.  
       I am no longer the master of myself  
       But a slave to guilt trips and convulsions.
 
@@ -427,7 +426,7 @@
   %section
     :markdown
       I beat my breast  
-      As if to drum up courage.
+      As if to drum up courage.  
       In the face of these demi-gods  
       Only, I, have myself to lose.
 
@@ -437,7 +436,7 @@
 
   %section
     :markdown
-      Coming-of-age:
+      Coming-of-age:  
       The advent of self-possession.
 
       The indigenous mould  
@@ -488,7 +487,7 @@
   %section
     :markdown
       To gaze into Death’s eyes  
-      To gaze deeply without fear…
+      To gaze deeply without fear…  
       This is the only lesson I have learnt  
       From life’s horizontal misfortunes.
 
@@ -499,10 +498,10 @@
       Play to the music of monitors.
 
       Screens communicate erratically  
-      As if in possession of a conscience.
+      As if in possession of a conscience.  
       The slow emphasis of time
 
-      Resonates within these floral walls.
+      Resonates within these floral walls.  
       The measured ticking of these  
       Mechanical arms  
       Welcome an unwelcome future.
@@ -647,7 +646,7 @@
       The glacial incandescence of pride  
       Preserves, in its depths,  
       A fluid trace of  
-      Melancholy…
+      Melancholy.
 
   %section
     :markdown
@@ -657,8 +656,8 @@
 
       Beacon of light,  
       Once scintillating, now  
-      Bends in the fog of vacillation.
-      The heart no longer  
+      Bends in the fog of vacillation.  
+      The heart no longer 
       Beats in congruity;  
 
       His youthful verve has sunken  
@@ -669,7 +668,7 @@
   %section
     :markdown
       A man with a black turban  
-      (Cumulo-nimbus in nature)
+      (Cumulo-nimbus in nature)  
       Approaches me on my birthday,  
       At the eve of just another  
       Uneventful day…
@@ -776,7 +775,7 @@
       Through enfolded nebulas  
       Do this pergola of opaque memories  
       Measure the measurelessness  
-      Of inward desires while	
+      Of inward desires while  
       Courting the whispers  
       Of perpetual pampering.
 
@@ -860,7 +859,7 @@
 
       Bodies, lurid, in all its  
       Sacrificial splendour, bestows onto  
-      Each other noble presages.
+      Each other noble presages.  
       As the phantom cherubs take off  
 
       Into the enwoven embroidery  
@@ -963,7 +962,7 @@
       Listen! Don’t carp at the wind  
       Fellow brothers of this new generation  
       Glance out of your carrels  
-      And forsake ‘carpe diem,’
+      And forsake ‘carpe diem,’  
       Instead nourish your tree  
       With experientalism.
 
@@ -1034,7 +1033,7 @@
 
       Assigned with a wingspan of a vulture;  
       The intimidating plumage  
-      (The filtrate of a fad)
+      (The filtrate of a fad)  
       Has, unwantonly defined my  
       Character as predatory.
 
@@ -1042,7 +1041,7 @@
       No aviaries, or secluded reserves  
       Can contain me…
 
-      And why should they?
+      And why should they?  
       The sky is my threshold  
       And Earth, my sovereignty.
 
@@ -1060,7 +1059,7 @@
       If and when he leaves,  
       I shall become Basemath, and he, Esau  
       For I cannot uncurl the curve of  
-      This convexed revelation.
+      This convexed revelation.  
       As I have become an enstranged  
       Mirror-semblance  
       It is only sensible to change  
@@ -1083,7 +1082,7 @@
       Mother of all dynasties  
       Lay your head upon the crisp linen  
       And recite your prayers,  
-      Even if nonchalantly.
+      Even if nonchalantly.  
       The world is, at your command,  
       Huddled in a celestial-comb…
 
@@ -1109,7 +1108,7 @@
     :markdown
       Everyone’s concern  
       For my ‘well-being’
-      Has been duly noted (I say).
+      Has been duly noted (I say)  
       Yet a residue of astonishment  
       Hangs in my mouth  
 
@@ -1137,7 +1136,7 @@
 
   %section
     :markdown
-      Woman, why pretend to sleep?
+      Woman, why pretend to sleep?  
       Even with eyes closed  
       Your eye-lids sputter  
       To a quickened heart-beat.
@@ -1190,7 +1189,7 @@
 
   %section
     :markdown
-      Is there someone for everyone?
+      Is there someone for everyone?  
       Indeed I hope so.
 
       This idea  
@@ -1225,7 +1224,7 @@
     :markdown
       Face of pious simplicity,  
       A reflection short  
-      Of true portrayal.
+      Of true portrayal.  
       The smile, now famous,  
       In the sight of which  
       Venus doth stray;  
@@ -1234,11 +1233,11 @@
       And hemispheres they are.
 
       Spoken word of you  
-      Allures nature's observation.
+      Allures nature's observation.  
       Soft, yet iron-brave,  
       Pristine without conformity  
       Even the flute-notes of cherubs  
-      Endeavour to imitate.
+      Endeavour to imitate.  
       You blossom and consecrate  
       The fruits of love,  
       And in the name of charity,  
@@ -1256,8 +1255,8 @@
       Into a fiery well.  
 
       Memoirs of a love,  
-        A mere remnant of a lover's kiss  
-        The touch of our lips secured  
+      A mere remnant of a lover's kiss  
+      The touch of our lips secured  
       Nature’s momentum once…	
 
       The only  
@@ -1268,13 +1267,13 @@
     :markdown
       Take me for what I am,  
       For myself, for my beliefs  
-      Do not look at me to despise me.
-      Turn your face… confront!
+      Do not look at me to despise me.  
+      Turn your face… confront!  
       For, I too, can be as thoughtless  
       And as shrewd as you.
 
       My eyes, and yours, blink away  
-      Moments of the day, unchallenged.
+      Moments of the day, unchallenged.  
       As Time desensitizes us,  
       It is not our complexion that reveals  
       Our age.
@@ -1345,10 +1344,10 @@
   %section
     :markdown
       Cradled, cornelian face  
-      Stubborn you are in your budding!
+      Stubborn you are in your budding!  
       Mere reflection of  
       The mercurial sun, upon a time  
-      You were newly-weds.
+      You were newly-weds.  
       You roam existentially  
       Beyond veils of an imperfect hue;  
       Equipoised in this bleak  
@@ -1438,12 +1437,12 @@
       Dissolved portrait  
       Doubled infinity  
       Salvaging temperamentalists  
-      Make t\ his face top heavy.
+      Make this face top heavy.
 
   %section
     :markdown
       The penetration of a satiated mind  
-      (A malediction of a milked, flesh-worship)
+      (A malediction of a milked, flesh-worship)  
       Gather in its stock, impiously,  
       A pile of derelict injustices  
       While bludgeoning the raising arms  
@@ -1457,7 +1456,7 @@
     :markdown
       Fly, Fly away  
       Into the vacant night,  
-      Pure thoughts.
+      Pure thoughts.  
       Sink into the lustre  
       Of the celestial abyss.
 
@@ -1475,9 +1474,9 @@
 
       Brassy  
       Sardonic  
-      Charlatan, my dearest.
+      Charlatan, my dearest.  
       A heavy heart ripens  
-      Because of you…
+      Because of you…  
       Because it knows your secret well.
 
       Performing deviltry  
@@ -1490,12 +1489,12 @@
 
   %section
     :markdown
-      Chased by definition; now  
-      Prolapsed
+      Chased by definition;  
+      Now prolapsed
 
-      Meaning  
+      Meaning
 
-      Chastised.  
+      Chastised.
 
   %section
     :markdown
@@ -1625,7 +1624,7 @@
       With mood swings  
       Again nine month’s pregnant  
       Pregnant with the  
-      ‘flavour of the month’
+      ‘flavour of the month’  
       Yet motherless to a child.
 
       He is but a set of  
@@ -1645,14 +1644,14 @@
 
       I am only eleven  
       I am an alcoholic  
-      ‘So where is my pint…?’
+      ‘So where is my pint…?’  
       Says this non-conformist.
 
   %section
     :markdown
       Conscience  
       The inexorable parasite  
-      Shadow’s own copy…
+      Shadow’s own copy…  
       Lacks self-control
 
       From time to time  
@@ -1670,7 +1669,7 @@
 
   %section
     :markdown
-      Emotions bare the emblem of lust.
+      Emotions bare the emblem of lust.  
       From love to hate, anger or sorrow,  
       The uncommon thirst to fulfil  
       And absorb each one;  
@@ -1711,7 +1710,7 @@
     :markdown
       An embossed metalanguage  
       Fills my page with a script  
-      Of childish stupidities.
+      Of childish stupidities.  
       Like braille, these fingers  
       Are fed with an influx of sensations  
       That expose the undertone  
@@ -1721,7 +1720,7 @@
       Of earlier misdemeanours  
       That caricatured my youth,  
       My head is at last on my shoulders  
-      And on my limbs…
+      And on my limbs…  
       Can I be forgiven  
       For yet another whim?
 
@@ -1743,7 +1742,7 @@
     :markdown
       Resign from resistance,  
       Pause the pain and  
-      Silence the shooting.
+      Silence the shooting.  
       Halt the hammering and havoc;  
       Relinquish all provocation  
       By dismantling your misery  
@@ -1755,7 +1754,7 @@
       Through mustard clouds, but the  
       Stench of those perished, enshrouds  
       The men, entrenched, head down in prayer  
-      On this cold, defended, holy day.
+      On this cold, defended, holy day.  
       The calm, cerulean sky of a nearby dawn  
       Someone's mother prepares to mourn  
       The death of her child and of innocence known  
@@ -1775,7 +1774,7 @@
   %section
     :markdown
       Will I come to my senses eventually  
-      And proceed in taking off the disguises?
+      And proceed in taking off the disguises?  
       Will I come full circle and permit testimony  
       To my actions?
 
@@ -1783,8 +1782,8 @@
       As it was, and perhaps even,  
       As it should be…
 
-      No! Cast off ‘the Pariah,’ ‘the Delinquent’
-      And this ‘Spoilt-brat,’
+      No! Cast off ‘the Pariah,’ ‘the Delinquent’  
+      And this ‘Spoilt-brat,’  
       Set back instead the oriental smile  
       That everyone remembers you by.
   %section
