--- a/src/stylesheets/josephtong.scss
+++ b/src/stylesheets/josephtong.scss
@@ -5,7 +5,7 @@
 
 // External plugins e. g. jQuery plugins
 
-@import "vendor/plugin-name";
+//@import "vendor/plugin-name";
 
 // Base colors and sizes
 
