--- a/src/pages/poetry/_moment-between-thoughts.haml
+++ b/src/pages/poetry/_moment-between-thoughts.haml
@@ -26,15 +26,15 @@
       ### Lysandra
 
       Alas, towards a fading breath  
-      Like the mellifluousness 
+      Like the mellifluousness  
       Of a daydream  
-      I am gone. 
+      I am gone.  
 
   %section
     :markdown
       ### Ingenerare~
 
-      I belong in 
+      I belong in  
       This numbed silence  
       In this playground of thoughts  
       Where Truth lies still, skinned.
@@ -45,7 +45,7 @@
 
       Seated at the helm of introspection  
       Entwined amidst an embroidered fallacy  
-      Eyes gaze forth without  condemnation 
+      Eyes gaze forth without condemnation  
       With nerves unsettled.
 
   %section
@@ -84,522 +84,330 @@
     :markdown
       ### Miscellaneous
 
-      Generosity is not measured 
+      Generosity is not measured  
       By the amount you give  
       But by the amount  
       You sacrifice.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Proverbialis
+  %section
+    :markdown
+      ### Proverbialis
 
       To draw on happiness  
       In between the frames of time  
       Is to capture a moment  
       In which many are denied.
 
-
-
-
-
-      Babylonius
+  %section
+    :markdown
+      ### Babylonius
 
       The faint chime of prurience  
       Encroaches as dusk appears  
       Like the susurration of a heart-beat  
       Eyes closed, reality disappears.
 
-
-
-
-
-      Axioma
+  %section
+    :markdown
+      ### Axioma
 
       Every feeling warrants an explanation  
       Like a whirlwind, emotions fumble without cause  
       As every word succumbs to the light  
       The temple of interpretation is preserved.
 
-
-
-
-
-      Dorma
+  %section
+    :markdown
+      ### Dorma
 
       Life brings only decay: so  
       Damn the light, the mirrored hallways  
       The busy streets, the abject glances  
       That steer all hopes away.
 
-
-
-
-
-      Exhortatio
+  %section
+    :markdown
+      ### Exhortatio
 
       Shame on you, fatherland  
       For wooing God’s trust  
       The glorification of conquest dangles like bait  
       With arms that chime a forgotten hour.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Neuter
+  %section
+    :markdown
+      ### Neuter
 
       To seek is to follow ignorance  
       In waiting comes the unforeseen  
       In forgetting the paramount is delivered                                                                                            
       In rejecting the all-conquering imbues within.
 
-
-
-
-
-      Atta Kenare
+  %section
+    :markdown
+      ### Atta Kenare
 
       Bruised and battered  
       Like rotten plums  
       Fallen from a great height  
       They crouch at the foot of the cross.
 
-
-
-
-
-      Crystallum
+  %section
+    :markdown
+      ### Crystallum
 
       Riding on the carousel of deceit  
       Screened by the flames of unreality  
       Such uncharted allegories  
-       Do youthful minds trail.
+      Do youthful minds trail.
 
-
-
-
-
-      Pahlaviv
+  %section
+    :markdown
+      ### Pahlaviv
 
       To gaze through the eyes of an emperor  
       To smell the orchids and touch the gold  
-      To lose it all, life grows 
+      To lose it all, life grows  
       Old in an instant.
 
-
-
-
-
-      Disfacere
+  %section
+    :markdown
+      ### Disfacere
 
       Surrendering to an infinite power  
       Where strength turns to its substitute  
       And the frame of composure skews  
       Fragments may be buried, but the cycle continues.
 
+  %section
+    :markdown
+      ### Epiphania
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Epiphania
-
-      When the heart and the mind 
+      When the heart and the mind  
       Aligns itself with each other  
       Life’s simple complexities  
       Blossom like a rare flower.
 
-
-
-
-
-      Intercedere
+  %section
+    :markdown
+      ### Intercedere
 
       To lose sight of ambition  
       Is to draw the dagger deeper  
       Words never fulfil prophecies  
       Without the deeds to accompany.
 
-
-
-
-
-      Maledictio
+  %section
+    :markdown
+      ### Maledictio
 
       The torment of a reflection  
       Has made its imprint  
       The mind seeks validation  
       As reasons wrestle with expectations.
 
-
-
-
-
-      Candidus
+  %section
+    :markdown
+      ### Candidus
 
       Love’s escapade  
       A mere fantasy  
       Surrendering from the womb  
       Tender arms embrace my kind.
 
-
-
-
-
-      Perfectio 
+  %section
+    :markdown
+      ### Perfectio  
 
       Love is not the resounding tune of joy  
       But the unity of every beat.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Provocatio
+  %section
+    :markdown
+      ### Provocatio
 
       Silent is the voice that speaks of loss  
       Still is the heart-beat that brims with fear  
-      And empty is the mind 
+      And empty is the mind  
       That demands forgiveness.
 
+  %section
+    :markdown
+      ### Rursus
 
-
-
-
-      Rursus
-
-       Gone are the colours and sounds of youth  
+      Gone are the colours and sounds of youth  
       Memories cling onto every wall  
       Momentum of life, led by crooked steps  
       Finally submits to the charge of dawn.
 
-
-
-
-
-      Salvus
+  %section
+    :markdown
+      ### Salvus
 
       I am used to disappointment  
       What is it to wait another day?
 
-
-
-
-
-      Constantia
+  %section
+    :markdown
+      ### Constantia
 
       Faith, revisited  
       Heartache, my Constance.
 
-
-
-
-
-      Constantia II
+  %section
+    :markdown
+      ### Constantia II
 
       The vivid gesture of victory  
       Flickers with pathetic clarity.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Atrophia
+  %section
+    :markdown
+      ### Atrophia
 
       With every truth-bearing admission  
       That finds its way to heaven  
       Another greed-driven sentiment  
       Bloats the heart with questions.
 
-
-
-
-
-      Solus
+  %section
+    :markdown
+      ### Solus
 
       Beyond the sapphire complexion  
       Ridden with endearment  
       A semblance of a fractured moment  
       Etches poetically into lost time.
 
-
-
-
-
-      Insomnia
+  %section
+    :markdown
+      ### Insomnia
 
       Dissembling the puzzle  
       With tortured breath  
       Perpetual beginnings  
       Renders false destinies.
 
-
-
-
-
-      Desiderium
+  %section
+    :markdown
+      ### Desiderium
 
       The silken veil ascends  
       Dreams left undisturbed  
       Bosoms still wet with dew  
       Masked with a scent of allure.
 
-
-
-
-
-      Nysa
+  %section
+    :markdown
+      ### Nysa
 
       Shards of light sublime  
       Pirouettes on the seared dunes  
       A matrimony of young spirits  
       Glide into the gleaming horizon.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Donatus
+  %section
+    :markdown
+      ### Donatus
 
       Faith tied with a ribbon  
       Head bowed in contemplation  
       As the soul searches beyond  
       Senses rouse frustration.
 
-
-
-
-
-      Eulalia
+  %section
+    :markdown
+      ### Eulalia
 
       As hours amend each dying hour  
       Irrelevance blends into oblivion  
-      In wait of an apparition beneath the moon 
+      In wait of an apparition beneath the moon  
       Consciousness wilts as desires bloom.
 
-
-
-
-
-      Hevel
+  %section
+    :markdown
+      ### Hevel
 
       Certainty ascends like a plume of smoke  
       Consequence bears no resemblance to hope  
       The gleaming peripheral allures distant glances  
       Bound onto ourselves with muted wishes.
 
-
-
-
-
-      Hyakinthos
+  %section
+    :markdown
+      ### Hyakinthos
 
       Curiosity multiplies with every conquest  
       Yet passiveness has never strayed far  
       In search of another truth  
       This chair has never moved.
 
+  %section
+    :markdown
+      ### Arimathea
 
-
-
-
-      Arimathea
-
-      Daylight seeps in and fills 
+      Daylight seeps in and fills  
       These walls with momentary light  
       The warmth becomes a memory  
       As dust settles on footprints.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Vespasanious
+  %section
+    :markdown
+      ### Vespasanious
 
       Love’s conquest lies in its defeat  
       Its crowning glory; a veil of absence  
       With confessions, soft cheeks redden  
       A union sealed with remembrance.
 
-
-
-
-
-      Zephyros 
+  %section
+    :markdown
+      ### Zephyros  
 
       I can feel her breath  
-       In every recollection  
+      In every recollection  
       A turmoil of sentiment  
       Plunders inside this chrysalis.
 
-
-
-
-
-      Castanea
+  %section
+    :markdown
+      ### Castanea
 
       I turn to myself and not to God  
       With every anguish to Him I place  
       And in seeking reason  
       I flee from conviction.
 
+  %section
+    :markdown
+      ### Myroxylon
 
-
-
-
-      Myroxylon
-
-      Will my ending 
+      Will my ending  
       Extract pity or humour  
-      Would this inevitability stem 
+      Would this inevitability stem  
       From misunderstanding?
 
-
-
-
-
-      Buxus
-
+  %section
+    :markdown
+      ### Buxus
 
       Nurtured emotions  
       Like swollen buds  
       Sway in the heat  
       Waiting to unravel.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Cerasus
-
+  %section
+    :markdown
+      ### Cerasus
 
       Hypnotized by cinders  
       Caressed by flames  
       Eyes sweep across  
       Her desert  landscape.
 
-
-
-
-      Canto
-
+  %section
+    :markdown
+      ### Canto
 
       My hands have touched God’s affinity  
       Yet where is the cross that bears his divinity  
