--- a/src/stylesheets/partials/_intro.scss
+++ b/src/stylesheets/partials/_intro.scss
@@ -1,11 +1,11 @@
 #intro {
-  @extend .page;
-  background: image-url("25.jpg");
-  background-size: 100% 100%;
   bottom: 0;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
   z-index: 999;
+  img {
+    position: absolute;
+  }
 }
