--- a/src/stylesheets/partials/_art.scss
+++ b/src/stylesheets/partials/_art.scss
@@ -9,6 +9,7 @@
   }
   .previous,
   .next {
+    color: lighten($medium-color, 20%);
     float: left;
     font-size: 80px;
     margin: 170px 20px 0 0;
