--- a/src/stylesheets/partials/_intro.scss
+++ b/src/stylesheets/partials/_intro.scss
@@ -1,4 +1,5 @@
 #intro {
+  background: black;
   bottom: 0;
   left: 0;
   position: absolute;
@@ -7,5 +8,6 @@
   z-index: 999;
   img {
     position: absolute;
+    @include opacity(0);
   }
 }
