--- a/src/stylesheets/partials/_art.scss
+++ b/src/stylesheets/partials/_art.scss
@@ -2,9 +2,12 @@
   article {
     @extend .page;
     padding-top: 100px;
+    position: relative;
   }
   figure {
-    float: left;
+    left: 80px;
+    position: absolute;
+    top: 100px;
     width: 780px;
   }
   .previous,
@@ -14,9 +17,12 @@
     font-size: 80px;
     margin: 170px 20px 0 0;
     width: 60px;
+    &:hover {
+      color: $medium-color;
+    }
   }
   .next {
-    margin: 170px 0 0 20px;
+    margin: 170px 0 0 800px;
     text-align: right;
   }
 }
