previous/next design

--- a/src/stylesheets/partials/_art.scss
+++ b/src/stylesheets/partials/_art.scss
@@ -12,17 +12,22 @@
   }
   .previous,
   .next {
+    background: image-url("layout/previous.png");
     color: lighten($medium-color, 20%);
     float: left;
     font-size: 80px;
+    height: 120px;
     margin: 170px 20px 0 0;
     width: 60px;
+    @include hide-text;
+    @include opacity(.3);
     &:hover {
       color: $medium-color;
+      @include opacity(1);
     }
   }
   .next {
+    background: image-url("layout/next.png");
     margin: 170px 0 0 800px;
-    text-align: right;
   }
 }
