--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -23,6 +23,8 @@
       %a(href="#") Berlin
       %a(href="#") London
 
+= partial "contact"
+
 #art
   = partial "art/paintings"
   = partial "art/photography"
