--- a/src/stylesheets/josephtong.scss
+++ b/src/stylesheets/josephtong.scss
@@ -44,6 +44,7 @@ $base-line-height: 1.231;
 // Content partials (article, lists, ...)
 
 @import "partials/intro";
+@import "partials/contact";
 @import "partials/index";
 @import "partials/poetry";
 @import "partials/art";
