poems down the fold

--- a/src/stylesheets/partials/_poetry.scss
+++ b/src/stylesheets/partials/_poetry.scss
@@ -15,8 +15,8 @@
     width: 940px;
   }
   header {
-    min-height: 14em;
-    padding: 200px 0 8em;
+    height: 14em;
+    padding: 200px 0 0;
   }
   section {
     margin: 9em 0;
