added london interior images

--- a/src/pages/_contact.haml
+++ b/src/pages/_contact.haml
@@ -2,9 +2,9 @@
   .address
     %h2 London
     %address
-      90 Cheyne Walk
+      8 More’s Garden
       %br
-      London SW3 5BB
+      London, SW3 5BB
       %br
       United Kingdom
     %p
@@ -18,9 +18,9 @@
       %br
       Germany
     %p
-      Tel: +49 30 20626883
+      Tel: +49 30 20913994
       %br
-      Fax: +49 30 20632893
+      Fax: +49 30 20672921
       %br
       Mobile: +49 151 11545630
     %p
@@ -28,10 +28,12 @@
   .address
     %h2 Hong Kong
     %address
-      Suite 1608 · The Parkside
+      Suite 1608 · Pacific Place Apartments
       %br
       88 Queensway
       %br
       Hong Kong
+    %p
+      Mobile: +852 6220 9898
   .created-by
     %a(href="http://www.hagenburger.net/") Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger
