--- a/src/stylesheets/josephtong.scss
+++ b/src/stylesheets/josephtong.scss
@@ -48,3 +48,4 @@ $base-line-height: 1.231;
 @import "partials/index";
 @import "partials/poetry";
 @import "partials/art";
+@import "partials/interior";
