--- a/src/pages/_contact.haml
+++ b/src/pages/_contact.haml
@@ -36,4 +36,5 @@
     %p
       Mobile: +852 6220 9898
   .created-by
-    %a(href="http://www.hagenburger.net/") Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger
+    %a(href="http://www.hagenburger.net/" title="Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger")
+      = img "layout/nico-hagenburger.png", :alt => "Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger"
