javascript css #target implementation

--- a/src/pages/_contact.haml
+++ b/src/pages/_contact.haml
@@ -2,7 +2,7 @@
   .address
     %h2 London
     %address
-      8 More’s Garden
+      90 Cheyne Walk
       %br
       London, SW3 5BB
       %br
@@ -28,7 +28,7 @@
   .address
     %h2 Hong Kong
     %address
-      Suite 1608 · Pacific Place Apartments
+      Suite 1608, The Parkside
       %br
       88 Queensway
       %br
