--- a/src/stylesheets/partials/_contact.scss
+++ b/src/stylesheets/partials/_contact.scss
@@ -2,9 +2,12 @@
   @extend .page;
   @extend .headline-font;
   padding-top: 100px;
+  position: relative;
   width: 940px;
+  @include clearfix;
   .address {
     float: left;
+    padding-bottom: 120px;
     width: 33%;
     h2 {
       display: inline-block;
@@ -46,8 +49,9 @@
     font-style: normal;
   }
   .created-by {
-    clear: both;
-    padding-top: 5em;
-    text-align: center;
+    bottom: 0;
+    left: 50%;
+    margin-left: -80px;
+    position: absolute;
   }
 }
