--- a/src/pages/_contact.haml
+++ b/src/pages/_contact.haml
@@ -1,21 +1,21 @@
 #contact
   .address
     %h2 London
-    %address
+    %address<
       90 Cheyne Walk
-      %br
+      %br>
       London, SW3 5BB
-      %br
+      %br>
       United Kingdom
     %p
       Mobile: +44 7770 752727
   .address
     %h2 Berlin
-    %address
+    %address<
       Unter den Linden 14
-      %br
+      %br>
       10117 Berlin
-      %br
+      %br>
       Germany
     %p
       Tel: +49 30 20913994
@@ -27,11 +27,11 @@
       %a(href="mailto:joseph@josephtong.de") joseph@josephtong.de
   .address
     %h2 Hong Kong
-    %address
+    %address<
       Suite 1608, The Parkside
-      %br
+      %br>
       88 Queensway
-      %br
+      %br>
       Hong Kong
     %p
       Mobile: +852 6220 9898
