added new poem nebula

--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -2,7 +2,7 @@
 - lang = @lang || 'en'
 - @author = "Joseph C L Tong"
 - @description = "Joseph C L Tong"
-- @title = "Joseph C L Tong"
+- @title = "JOSEPH C L TONG"
 <!--[if lt IE 7 ]><html lang="#{lang}" class="no-js ie6"><![endif]-->
 <!--[if IE 7 ]><html lang="#{lang}" class="no-js ie7"><![endif]-->
 <!--[if IE 8 ]><html lang="#{lang}" class="no-js ie8"><![endif]-->
@@ -28,8 +28,6 @@
     %link(rel="apple-touch-icon" href="#{current_page_relative_path}apple-touch-icon.png")
     %link(rel="stylesheet" href="#{current_page_relative_path}stylesheets/josephtong.css?v=4")
     %script(src="#{current_page_relative_path}javascripts/vendor/modernizr-1.5.min.js")
-    -# see http://www.hagenburger.net/BLOG/A-Better-Typekit-Integration.html
-    %script(async src="//use.typekit.com/ith3lis.js")
     %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
     %script
       !window.jQuery && document.write(unescape('%3Cscript src="#{current_page_relative_path}/javascripts/vendor/jquery-1.4.2.min.js"%3E%3C/script%3E'))
