--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -17,6 +17,7 @@
       %a(href="#re-vera") Re Vera
       %a(href="#neue") Neue
       %a(href="#tausend") Tausend
+      %a(href="#nebula") Nebula
   %section#ante-interior
     %h2 Ante/Interior
     %nav
@@ -43,3 +44,4 @@
   = partial "poetry/re-vera"
   = partial "poetry/neue"
   = partial "poetry/tausend"
+  = partial "poetry/nebula"
