--- a/src/pages/art/_photography.haml
+++ b/src/pages/art/_photography.haml
@@ -2,5 +2,5 @@
   %a.previous(href="#") &lt;
   - images_in('photography/*.jpg').each do |image|
     %figure
-      = img "photography/#{image}"
+      %img(data-src="#{current_page_relative_path}images/photography/#{image}")
   %a.next(href="#") &gt;
