--- a/src/pages/interior/_london.haml
+++ b/src/pages/interior/_london.haml
@@ -2,5 +2,5 @@
   %a.previous(href="#") &lt;
   - images_in('london/*.jpg').each do |image|
     %figure
-      = img "london/#{image}"
+      %img(data-src="#{current_page_relative_path}images/london/#{image}")
   %a.next(href="#") &gt;
